--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -102,6 +102,10 @@ jobs:
       if: contains(matrix.packages, 'vmec') || contains(matrix.packages, 'all')
       run: pip install -v git+https://github.com/hiddenSymmetries/booz_xform
 
+    - name: Install virtual_casing
+      if: contains(matrix.packages, 'vmec') || contains(matrix.packages, 'all')
+      run: pip install -v git+https://github.com/mbkumar/virtual-casing.git@pybind
+
     # Checking out SPEC is a tricky because it is a private repository.
     # See https://github.community/t/best-way-to-clone-a-private-repo-during-script-run-of-private-github-action/16116/7
     # https://stackoverflow.com/questions/57612428/cloning-private-github-repository-within-organisation-in-actions
