--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -104,7 +104,7 @@ jobs:
 
     - name: Install virtual_casing
       if: contains(matrix.packages, 'vmec') || contains(matrix.packages, 'all')
-      run: pip install -v git+https://github.com/mbkumar/virtual-casing.git@pybind
+      run: pip install -v git+https://github.com/hiddenSymmetries/virtual-casing
 
     # Checking out SPEC is a tricky because it is a private repository.
     # See https://github.community/t/best-way-to-clone-a-private-repo-during-script-run-of-private-github-action/16116/7
