--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -96,6 +96,7 @@ jobs:
       run: env
 
     - name: Install python dependencies
+      run: sudo apt-get install graphviz
       run: pip install wheel numpy f90nml scikit-build cmake qsc sympy pyevtk matplotlib ninja plotly networkx pygraphviz
 
     - name: Install booz_xform
