--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Step to get tag name
         if: startsWith(github.event.ref, 'refs/tags/v')
-        run: echo "tag=${GITHUB_REF#refs/tags/" >> $GITHUB_ENV
+        run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
 
       - name: Step to get tag name
