Ability to use xsimd from another source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,10 @@ endif()
 IF(DEFINED ENV{CI})
     message(STATUS "CI environment detected. Set compilation flags accordingly (target ivybridge which supports avx).")
     set(CMAKE_CXX_FLAGS "-O3 -march=ivybridge -mfma -ffp-contract=fast")
-elseif(DEFINED ENV{CONDA_BUILD})
+elseif(DEFINED ENV{CONDA_PREFIX})
     message(STATUS "conda build environment detected. Let conda set compilation flags accordingly.")
+    include_directories($ENV{CONDA_PREFIX}/include)
+    message(STATUS "CONDA_PREFIX=$ENV{CONDA_PREFIX}")
     # set(CMAKE_CXX_FLAGS "-O3 -march=ivybridge -mfma -ffp-contract=fast")
 else()
     message(STATUS "Local build detected. Set compilation flags accordingly (march=native).")
@@ -103,12 +105,18 @@ set_target_properties(${PROJECT_NAME}
     CXX_STANDARD_REQUIRED ON)
 
 target_include_directories(${PROJECT_NAME} PRIVATE "thirdparty/xtensor/include" "thirdparty/xtensor-python/include" "thirdparty/xtl/include" "thirdparty/eigen" ${Python_NumPy_INCLUDE_DIRS} "src/simsoptpp/")
-include(CheckIncludeFileCXX)
-CHECK_INCLUDE_FILE_CXX("xsimd/xsimd.hpp" HAVE_XSIMD)
-IF(NOT HAVE_XSIMD)
+get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+foreach(dir ${dirs})
+  find_path(HAVE_XSIMD xsimd.hpp PATHS ${dir}/xsimd)
+  IF(NOT HAVE_XSIMD)
     message( STATUS "xsimd is not found, including from thirdparty/" )
     target_include_directories(${PROJECT_NAME} PRIVATE "thirdparty/xsimd/include")
-ENDIF()
+  ELSE()
+    message( STATUS "xsimd found in ${dir}/xsimd")
+    target_include_directories(${PROJECT_NAME} PRIVATE "${dir}")
+  ENDIF()
+endforeach()
+
 target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt)
 
 if(NOT Boost_FOUND)
@@ -127,9 +135,18 @@ set_target_properties(profiling
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON)
 target_include_directories(profiling PRIVATE  "thirdparty/xtensor/include" "thirdparty/xtl/include" "thirdparty/eigen" "src/simsoptpp/")
-IF(NOT HAVE_XSIMD)
-    target_include_directories(profiling PRIVATE  "thirdparty/xsimd/include")
-ENDIF()
+get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+foreach(dir ${dirs})
+  find_path(HAVE_XSIMD xsimd.hpp PATHS ${dir}/xsimd)
+  IF(NOT HAVE_XSIMD)
+    message( STATUS "xsimd is not found, including from thirdparty/" )
+    target_include_directories(profiling PRIVATE "thirdparty/xsimd/include")
+  ELSE()
+    message( STATUS "xsimd.hpp found in ${dir}/xsimd")
+    target_include_directories(profiling PRIVATE "${dir}")
+  ENDIF()
+endforeach()
+
 target_link_libraries(profiling PRIVATE fmt::fmt)
 
 
