Initial commit of CurrentPotential.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,8 @@ pybind11_add_module(${PROJECT_NAME}
     src/simsoptpp/dommaschk.cpp src/simsoptpp/reiman.cpp src/simsoptpp/tracing.cpp 
     src/simsoptpp/winding_surface.cpp
     src/simsoptpp/magneticfield_biotsavart.cpp src/simsoptpp/python_boozermagneticfield.cpp
-    src/simsoptpp/boozerradialinterpolant.cpp
+    src/simsoptpp/boozerradialinterpolant.cpp src/simsoptpp/python_currentpotential.cpp
+    src/simsoptpp/currentpotential.cpp
     )
 
 set_target_properties(${PROJECT_NAME}
