--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - master
-      - mbk/conda_package
+      - conda_package
   pull_request:
   release:
     types: [published]
