--- a/setup.cfg
+++ b/setup.cfg
@@ -85,27 +85,5 @@ where = src
     log_config.yaml
     NCSX.dat
     HSX.dat
-    GIULIANI_length18_nsurfaces5.ma
-    GIULIANI_length18_nsurfaces5.curves
-    GIULIANI_length18_nsurfaces5.currents
-    GIULIANI_length20_nsurfaces5.ma
-    GIULIANI_length20_nsurfaces5.curves
-    GIULIANI_length20_nsurfaces5.currents
-    GIULIANI_length22_nsurfaces5.ma
-    GIULIANI_length22_nsurfaces5.curves
-    GIULIANI_length22_nsurfaces5.currents
-    GIULIANI_length24_nsurfaces5.ma
-    GIULIANI_length24_nsurfaces5.curves
-    GIULIANI_length24_nsurfaces5.currents
-    GIULIANI_length18_nsurfaces9.ma
-    GIULIANI_length18_nsurfaces9.curves
-    GIULIANI_length18_nsurfaces9.currents
-    GIULIANI_length20_nsurfaces9.ma
-    GIULIANI_length20_nsurfaces9.curves
-    GIULIANI_length20_nsurfaces9.currents
-    GIULIANI_length22_nsurfaces9.ma
-    GIULIANI_length22_nsurfaces9.curves
-    GIULIANI_length22_nsurfaces9.currents
-    GIULIANI_length24_nsurfaces9.ma
-    GIULIANI_length24_nsurfaces9.curves
-    GIULIANI_length24_nsurfaces9.currents
+    GIULIANI_length*
+
