Downgrade CI microarch to westmere from ivybridge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,8 @@ endif()
 
 include(CheckCXXCompilerFlag)
 IF(DEFINED ENV{CI})
-    message(STATUS "CI environment detected. Set compilation flags accordingly (target ivybridge which supports avx).")
-    set(CMAKE_CXX_FLAGS "-O3 -march=ivybridge -mfma -ffp-contract=fast")
+    message(STATUS "CI environment detected. Set compilation flags targetting Westmere microarch.")
+    set(CMAKE_CXX_FLAGS "-O3 -march=westmere")
 elseif(DEFINED ENV{CONDA_BUILD})
     message(STATUS "conda build environment detected. Let conda set compilation flags accordingly.")
     # set(CMAKE_CXX_FLAGS "-O3 -march=ivybridge -mfma -ffp-contract=fast")
