--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 setuptools_scm >= 6.0
 numpy >= 1.19.4
-jax >= 0.2.5
-jaxlib >= 0.1.56
+#jax >= 0.2.5
+#jaxlib >= 0.1.56
 scipy >= 1.5.4
 Deprecated >= 1.2.10
 nptyping >= 1.3.0
