--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -239,7 +239,7 @@ jobs:
         if-no-files-found: error
 
   coverage:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [ test ]
     steps:
 
