--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,7 +13,7 @@ on: [push, pull_request]
 
 jobs:
   CI:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     env:
       OMPI_ALLOW_RUN_AS_ROOT: 1
