--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -5,7 +5,11 @@ on: [push, pull_request]
 jobs:
   linux_wheels:
     name: Build wheels on ubuntu
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-11, macos-12, ubuntu-20.04]
 
     steps:
       - uses: actions/checkout@v3
@@ -14,18 +18,18 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Build wheels
-        uses: joerick/cibuildwheel@v1.9.0
+        uses: pypa/cibuildwheel@v2.11.4
         # to supply options, put them in 'env', like:
         env:
-          # Only build for python 3.{7,8,9}
-          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-*
+          # Only build for python 3.{7,8,9,10,11}
+          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-* cp311-*
           # Supports only x86_64 arch for linux
           CIBW_ARCHS_LINUX: x86_64
           # Use manylinux2014
           #CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_SKIP: cp27-*
           CIBW_DEPENDENCY_VERSIONS: latest
-          CIBW_BEFORE_BUILD_LINUX: pip install --upgrade pip setuptools wheel numpy cmake ninja setuptools_scm[toml]
+          # CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel numpy cmake ninja setuptools_scm[toml]
 
       - uses: actions/upload-artifact@v3
         with:
@@ -33,38 +37,38 @@ jobs:
 
 
   # Alternate setup for mac_wheel because cibuildwheel is failing for mac
-  mac_wheels:
-    name: Build wheels on mac 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        python: [3.7, 3.8, 3.9, "3.10"]
-        os: [macos-11, macos-12]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Fetch all history for all tags
-        run: git fetch --prune --unshallow
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
-
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip 
-
-      - name: Install wheel builder packages 
-        run: python -m pip install setuptools wheel delocate
-
-      - name: Build and repair wheels
-        run: |
-          python -m pip wheel -w wheel --no-deps .
-          delocate-wheel --require-archs x86_64 -w ./wheelhouse ./wheel/simsopt*.whl
-         
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
+#  mac_wheels:
+#    name: Build wheels on mac 
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        python: [3.7, 3.8, 3.9, "3.10"]
+#        os: [macos-11, macos-12]
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Fetch all history for all tags
+#        run: git fetch --prune --unshallow
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: ${{ matrix.python }}
+#
+#      - name: Upgrade pip
+#        run: python -m pip install --upgrade pip 
+#
+#      - name: Install wheel builder packages 
+#        run: python -m pip install setuptools wheel delocate
+#
+#      - name: Build and repair wheels
+#        run: |
+#          python -m pip wheel -w wheel --no-deps .
+#          delocate-wheel --require-archs x86_64 -w ./wheelhouse ./wheel/simsopt*.whl
+#         
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          path: ./wheelhouse/*.whl
 
   build_sdist:
     name: Build source distribution
