--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -27,9 +27,9 @@ jobs:
           CIBW_ARCHS_LINUX: x86_64
           # Use manylinux2014
           #CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          CIBW_SKIP: cp27-*
+          CIBW_SKIP: cp27-* cp36-*
           CIBW_DEPENDENCY_VERSIONS: latest
-          # CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel numpy cmake ninja setuptools_scm[toml]
+          CIBW_BEFORE_BUILD: pip install --upgrade pip setuptools wheel numpy cmake ninja setuptools_scm[toml]
 
       - uses: actions/upload-artifact@v3
         with:
