--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build_wheels:
-    name: Build wheels on ubuntu
+    name: Build wheels on ${{ matrix.os }}
     # runs-on: ubuntu-latest
     runs-on: ${{ matrix.os }}
     strategy:
@@ -21,8 +21,8 @@ jobs:
         uses: pypa/cibuildwheel@v2.11.4
         # to supply options, put them in 'env', like:
         env:
-          # Only build for python 3.{7,8,9,10,11}
-          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-* cp311-*
+          # Only build for python 3.{7,8,9,10}
+          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-*
           # Supports only x86_64 arch for linux
           CIBW_ARCHS_LINUX: x86_64
           # Use manylinux2014
