Fixed filename error with W7-X.dat

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,7 @@ where = src
     log_config.yaml
     NCSX.dat
     HSX.dat
-    W7X.dat
+    W7-X.dat
     GIULIANI_length18_nsurfaces5.ma
     GIULIANI_length18_nsurfaces5.curves
     GIULIANI_length18_nsurfaces5.currents
