Bug fixes in non-xsimd implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,9 +45,11 @@ else()
     if(COMPILER_SUPPORTS_MARCH_NATIVE)
     	set(CMAKE_CXX_FLAGS "-O3 -march=native -mfma -ffp-contract=fast")
     elseif(${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "arm64")  
-    	set(CMAKE_CXX_FLAGS "-O3 -mcpu=apple-a14 -mfma -ffp-contract=fast")
+    	# set(CMAKE_CXX_FLAGS "-O3 -mcpu=apple-a14 -mfma -ffp-contract=fast")
+    	set(CMAKE_CXX_FLAGS "-g -O0 -mcpu=apple-a14")
     endif()
 endif()
+message(STATUS "CMAKE_FLAGs are ${CMAKE_CXX_FLAGS}")
 
 find_package(OpenMP)
 find_package(Boost 1.60.0)
@@ -96,7 +98,7 @@ set(XTENSOR_USE_TBB 0)
 pybind11_add_module(${PROJECT_NAME}
     src/simsoptpp/python.cpp src/simsoptpp/python_surfaces.cpp src/simsoptpp/python_curves.cpp
     src/simsoptpp/python_magneticfield.cpp src/simsoptpp/python_tracing.cpp src/simsoptpp/python_distance.cpp
-    # src/simsoptpp/biot_savart_py.cpp
+    src/simsoptpp/biot_savart_py.cpp
     src/simsoptpp/biot_savart_vjp_py.cpp
     src/simsoptpp/regular_grid_interpolant_3d_py.cpp
     src/simsoptpp/curve.cpp src/simsoptpp/curverzfourier.cpp src/simsoptpp/curvexyzfourier.cpp
