Add conda directories to building simsopt if using conda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,12 @@ else()
     endif()
 endif()
 
+if(DEFINED ENV{CONDA_PREFIX})
+  include_directories($ENV{CONDA_PREFIX}/include)
+  link_directories("$ENV{CONDA_PREFIX}/lib")
+  message(STATUS "Conda prefix is $ENV{CONDA_PREFIX}")
+endif()
+
 find_package(OpenMP)
 find_package(Boost 1.60.0)
 if(Boost_FOUND)
