Replace x86_64 aarch64 macros with newly defined USE_XSIMD macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,13 @@ if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
     endif()
 endif()
 
+# For XSIMD usage
+IF(DEFINED ENV{NO_XSIMD})
+   set(NO_XSIMD ON)
+ENDIF()
+configure_file(config.h.in config.h)
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
 include(CheckCXXCompilerFlag)
 IF(DEFINED ENV{CI})
     message(STATUS "CI environment detected. Set compilation flags targetting Westmere microarch.")
@@ -46,9 +53,11 @@ else()
     	set(CMAKE_CXX_FLAGS "-O3 -march=native -mfma -ffp-contract=fast")
     elseif(${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "arm64")  
     	set(CMAKE_CXX_FLAGS "-O3 -mcpu=apple-a14 -mfma -ffp-contract=fast")
+    else()
+    	set(CMAKE_CXX_FLAGS "-O3 -mfma -ffp-contract=fast")
     endif()
 endif()
-message(STATUS "CMAKE_FLAGs are ${CMAKE_CXX_FLAGS}")
+message(STATUS "CMAKE_CXX_FLAGs are ${CMAKE_CXX_FLAGS}")
 
 find_package(OpenMP)
 find_package(Boost 1.60.0)
