--- a/ci/Dockerfile.ubuntu
+++ b/ci/Dockerfile.ubuntu
@@ -48,14 +48,14 @@ ENV PATH="/venv/bin:${PATH}"
 
 RUN git clone --depth 1 https://github.com/PrincetonUniversity/SPEC.git /src/SPEC && \
     cd /src/SPEC   &&  \
-    /venv/bin/pip install -v . && \ # setup.py bdist_wheel 2>&1 | tee spec_build.log && \
+    /venv/bin/pip install -v . && \
     # /venv/bin/pip install -v dist/*.whl && \
     cd .. && rm -rf SPEC
     
 RUN git clone --depth 1 https://github.com/hiddenSymmetries/VMEC2000.git /src/VMEC && \
     cd /src/VMEC && \
     cp cmake/machines/ubuntu.json cmake_config_file.json && \
-    /venv/bin/pip install -v . && \ # 2>&1 | tee vmec_build.log
+    /venv/bin/pip install -v . && \
     cd .. && rm -rf VMEC
 
 RUN /venv/bin/pip install h5py pyoculus py_spec
