--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -29,12 +29,12 @@ jobs:
       matrix:
         test-type: [unit, integrated]
         packages: [all, vmec, spec, none]
-        python-version: [3.7.15, 3.8.15, 3.9.16] # , 3.10.0] # To sync with coveragerc use 3 levels with python version
+        python-version: [3.8.17, 3.9.17, 3.10.12] # To sync with coveragerc use 3 levels with python version
         include:
-            - python-version: 3.9.16
+            - python-version: 3.9.17
               test-type: unit
               packages: none
-            - python-version: 3.9.16
+            - python-version: 3.9.17
               test-type: integrated
               packages: none
 
@@ -247,7 +247,7 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v4
       with:
-        python-version: 3.8.15
+        python-version: 3.8.17
 
     - name: Install coverage
       run: pip install coverage
