--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -21,7 +21,7 @@ jobs:
         # To supply options, put them in 'env'
         env:
           # Only build for python 3.{7,8,9,10}
-          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-*
+          CIBW_BUILD : cp37-* cp38-* cp39-* cp310-* cp311-*
           # Supports only x86_64 arch for linux
           CIBW_ARCHS_LINUX: x86_64
           CIBW_ARCHS_MACOS: "x86_64 arm64"
