--- a/.github/workflows/docs_test.yml
+++ b/.github/workflows/docs_test.yml
@@ -23,6 +23,23 @@ jobs:
       run: |
         pip install sphinx sphinx-rtd-theme sphinxcontrib-napoleon sphinx-autodoc-napoleon-typehints
 
+    - name: Install python dependencies for simsopt
+      run: |
+        sudo apt-get install graphviz graphviz-dev
+        pip install wheel numpy scipy f90nml h5py scikit-build cmake qsc sympy pyevtk matplotlib ninja plotly networkx pygraphviz
+
+    - name: Install booz_xform
+      run: pip install -v git+https://github.com/hiddenSymmetries/booz_xform
+
+    - name: Install virtual_casing
+      run: pip install -v git+https://github.com/hiddenSymmetries/virtual-casing
+
+    # - name: Fetch all history for all tags
+    #   run: git fetch --all --tags --prune --unshallow
+
+    - name: Install simsopt package
+      run: pip install -v .[MPI,SPEC]
+
     - name: Build docs
       run: |
         cd docs
