--- a/.github/workflows/docs_test.yml
+++ b/.github/workflows/docs_test.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: which pip after python setup
+      run: python -m pip install --upgrade pip
+
     - name: Install sphinx and its dependencies for building docs
       run: |
         pip install sphinx sphinx-rtd-theme sphinxcontrib-napoleon sphinx-autodoc-napoleon-typehints
