Don't install mpi for simsopt

--- a/.github/workflows/docs_test.yml
+++ b/.github/workflows/docs_test.yml
@@ -46,7 +46,7 @@ jobs:
     #   run: git fetch --all --tags --prune --unshallow
 
     - name: Install simsopt package
-      run: pip install -v .[MPI,SPEC]
+      run: pip install -v .
 
     - name: Build docs
       run: |
