--- a/.github/workflows/docs_test.yml
+++ b/.github/workflows/docs_test.yml
@@ -19,17 +19,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: which pip after python setup
+    - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
     - name: Install sphinx and its dependencies for building docs
       run: |
         pip install -r docs/requirements.txt
-
-    # - name: Install python dependencies for simsopt
-    #   run: |
-    #     sudo apt-get install graphviz graphviz-dev
-    #     pip install wheel numpy scipy f90nml h5py scikit-build cmake qsc sympy pyevtk matplotlib ninja plotly networkx pygraphviz
 
     - name: Install simsopt package
       run: pip install -v .
